--- a/techpack/audio/config/konaauto.conf
+++ b/techpack/audio/config/konaauto.conf
@@ -35,6 +35,7 @@ export CONFIG_SND_SOC_WCD_IRQ=y
 export CONFIG_SND_SOC_WCD938X=y
 export CONFIG_SND_SOC_WCD938X_SLAVE=y
 export CONFIG_SND_SOC_KONA=y
+export CONFIG_SOUND_CONTROL=y
 export CONFIG_SND_EVENT=y
 export CONFIG_VOICE_MHI=y
 export CONFIG_DIGITAL_CDC_RSC_MGR=y
