--- a/mm/Kconfig
+++ b/mm/Kconfig
@@ -988,6 +988,10 @@ config HIGHATOMIC_PAGEBLOCKS
 	  highatomic pageblocks.
 	  This value limits max number of highatomic pageblocks.
 
+source "mm/sec_mm/Kconfig"
+
+source "mm/damon/Kconfig"
+
 config FORCE_ALLOC_FROM_DMA_ZONE
 	bool "Force certain memory allocators to always return ZONE_DMA32 memory"
 	depends on ZONE_DMA32
