--- a/arch/Kconfig
+++ b/arch/Kconfig
@@ -491,7 +491,7 @@ config STACKPROTECTOR_STRONG
 	  size by about 2%.
 
 config LTO
-	def_bool n
+	def_bool y
 
 config ARCH_SUPPORTS_LTO_CLANG
 	bool
@@ -523,11 +523,8 @@ config LTO_NONE
 	bool "None"
 
 config LTO_CLANG
-	bool "Use clang Link Time Optimization (LTO) (EXPERIMENTAL)"
+	bool "Use clang ThinLTO (EXPERIMENTAL)"
 	depends on ARCH_SUPPORTS_LTO_CLANG
-	depends on !FTRACE_MCOUNT_RECORD || HAVE_C_RECORDMCOUNT
-	depends on !KASAN
-	depends on CC_IS_CLANG && LD_IS_LLD
 	select LTO
 	help
           This option enables clang's Link Time Optimization (LTO), which allows
@@ -556,6 +553,7 @@ config CFI_CLANG
 	bool "Use clang Control Flow Integrity (CFI) (EXPERIMENTAL)"
 	depends on LTO_CLANG
 	depends on KALLSYMS
+	default n
 	select CFI
 	help
 	  This option enables clang Control Flow Integrity (CFI), which adds
@@ -577,7 +575,8 @@ config ARCH_SUPPORTS_SHADOW_CALL_STACK
 	  stack switching.
 
 config SHADOW_CALL_STACK
-	bool "Clang Shadow Call Stack"
+	bool
+	default n
 	depends on ARCH_SUPPORTS_SHADOW_CALL_STACK
 	help
 	  This option enables Clang's Shadow Call Stack, which uses a
@@ -1019,9 +1018,10 @@ config ARCH_HAS_RELR
 	bool
 
 config RELR
-	bool "Use RELR relocation packing"
-	depends on ARCH_HAS_RELR && TOOLS_SUPPORT_RELR
+	bool
 	default y
+	depends on ARCH_HAS_RELR && TOOLS_SUPPORT_RELR
+	select LTO_CLANG #ik ik, im just lazy lmfao
 	help
 	  Store the kernel's dynamic relocations in the RELR relocation packing
 	  format. Requires a compatible linker (LLD supports this feature), as
