drivers: input: touchscreen: allow vla usage
Signed-off-by: skye-pa1n <sonicgames772@gmail.com>

--- a/drivers/input/touchscreen/zinitix/zt7650/Makefile
+++ b/drivers/input/touchscreen/zinitix/zt7650/Makefile
@@ -3,5 +3,5 @@
 #
 
 obj-$(CONFIG_TOUCHSCREEN_ZINITIX_ZT7650)	+= zinitix_ts.o
-ccflags-y += -Wformat
+ccflags-y += -Wformat -Wno-vla-extension -Wno-vla
 
