cpufreq: split acacia into acacia-perf and acacia-battery governors
Replace the single acacia governor with two specialized variants:

acacia-perf: Maximum performance governor with optimizations:
  - Per-CPU policy caching to avoid redundant frequency checks
  - Proper init/exit/start lifecycle hooks
  - core_initcall for early registration
  - likely() hints on hot path for better branch prediction

acacia-battery: Power-saving governor for maximum battery life:
  - Locks CPU to minimum frequency
  - Same optimization techniques as acacia-perf
  - Ideal for idle/standby scenarios

Both governors use cached frequency values to minimize overhead
when the target frequency hasn't changed.

Signed-off-by: techyguyperplexable <objecting@objecting.org>

--- a/drivers/cpufreq/Makefile
+++ b/drivers/cpufreq/Makefile
@@ -126,3 +126,5 @@ obj-$(CONFIG_SPARC_US3_CPUFREQ)		+= sparc-us3-cpufreq.o
 obj-$(CONFIG_UNICORE32)			+= unicore2-cpufreq.o
 
 subdir-ccflags-y += -Wformat
+obj-$(CONFIG_CPU_FREQ_GOV_ACACIA_PERF)		+= cpufreq_acacia_perf.o
+obj-$(CONFIG_CPU_FREQ_GOV_ACACIA_BATTERY)	+= cpufreq_acacia_battery.o
