mm: kconfig: Comment out a useless source
Change-Id: I957bc4309a3cab2c77ffb855b666754274fa7055
Signed-off-by: techyguyperplexable <objecting@objecting.org>

--- a/mm/Kconfig
+++ b/mm/Kconfig
@@ -988,7 +988,7 @@ config HIGHATOMIC_PAGEBLOCKS
 	  highatomic pageblocks.
 	  This value limits max number of highatomic pageblocks.
 
-source "mm/sec_mm/Kconfig"
+# source "mm/sec_mm/Kconfig"
 
 source "mm/damon/Kconfig"
 
