--- a/mm/Kconfig
+++ b/mm/Kconfig
@@ -990,7 +990,7 @@ config HIGHATOMIC_PAGEBLOCKS
 
 # source "mm/sec_mm/Kconfig"
 
-source "mm/damon/Kconfig"
+# source "mm/damon/Kconfig"
 
 config FORCE_ALLOC_FROM_DMA_ZONE
 	bool "Force certain memory allocators to always return ZONE_DMA32 memory"
